API Zugriff Team Deaktivieren/Aktivieren / STI User - User::Api
Authentifizierung via API für Benutzer freischalten/deaktivieren

fix bruteforce detector tests

fixtures, locales for api settings, bugs

tests authentifizierung freischalten/deaktivieren

fix capybara tests

delete apikeys with user, fix capybara

revised fixtures, delete user with keys test

Authentifizierung inkl. anti Brute-Force

API Endpoint Groups Teams

CRUD Actions Account API, search identifier

rubocop fix and unlock api

--- a/test/fixtures/accounts.yml
+++ b/test/fixtures/accounts.yml
@@ -9,6 +9,7 @@ account1:
   group: group1
   username: <%= "!!binary \"#{FixturesHelper.read_account_username('team1', 'account1')}\"" %>
   password: <%= "!!binary \"#{FixturesHelper.read_account_password('team1', 'account1')}\"" %>
+  identifier: identifier1
 
 account2:
   accountname: account2
@@ -16,3 +17,4 @@ account2:
   group: group2
   username: <%= "!!binary \"#{FixturesHelper.read_account_username('team2', 'account2')}\"" %>
   password: <%= "!!binary \"#{FixturesHelper.read_account_password('team2', 'account2')}\"" %>
+  identifier: identifier2
