--- a/test/fixtures/teammembers.yml
+++ b/test/fixtures/teammembers.yml
@@ -18,6 +18,11 @@ team1_alice:
   user: alice
   password: <%= "!!binary \"#{FixturesHelper.read_team_password('alice', 'team1')}\"" %>
 
+team1_alice_api:
+  team: team1
+  user: alice_api
+  password: <%= "!!binary \"#{FixturesHelper.read_team_password('alice_api', 'team1')}\"" %>
+
 team1_admin:
     team: team1
     user: admin
