revised fixtures, delete user with keys test

--- a/test/fixtures/teammembers.yml
+++ b/test/fixtures/teammembers.yml
@@ -18,10 +18,10 @@ team1_alice:
   user: alice
   password: <%= "!!binary \"#{FixturesHelper.read_team_password('alice', 'team1')}\"" %>
 
-team1_alice-api:
+team1_alice_api:
   team: team1
-  user: alice-api
-  password: <%= "!!binary \"#{FixturesHelper.read_team_password('alice-api', 'team1')}\"" %>
+  user: alice_api
+  password: <%= "!!binary \"#{FixturesHelper.read_team_password('alice_api', 'team1')}\"" %>
 
 team1_admin:
     team: team1
